php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #53362 Segmentation fault when extending SplFixedArray
Submitted: 2010-11-19 20:15 UTC Modified: 2010-11-19 21:09 UTC
From: public at grik dot net Assigned: felipe (profile)
Status: Closed Package: SPL related
PHP Version: 5.3.3 OS: Linux, Windows
Private report: No CVE-ID: None
 [2010-11-19 20:15 UTC] public at grik dot net
Description:
------------
Segmentation fault when extending SplFixedArray and working with it as with an array.

Test script:
---------------
<?php

class obj extends SplFixedArray{
    public function offsetSet($offset, $value) {}
}

$obj = new obj;

$obj[]=2;


Expected result:
----------------
nothing

Actual result:
--------------
Segmentation fault


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2010-11-19 20:27 UTC] public at grik dot net
Program received signal SIGSEGV, Segmentation fault.
0x00000000005cbfcf in spl_fixedarray_object_write_dimension (object=0x80232c818, offset=0x0, value=0x8023310a8)
    at /usr/ports/lang/php5/work/php-5.3.3/ext/spl/spl_fixedarray.c:409
409     in /usr/ports/lang/php5/work/php-5.3.3/ext/spl/spl_fixedarray.c
 [2010-11-19 20:32 UTC] pajoye@php.net
-Status: Open +Status: Feedback
 [2010-11-19 20:32 UTC] pajoye@php.net
Can you try using 5.3.4RC1 please?
 [2010-11-19 21:07 UTC] felipe@php.net
Automatic comment from SVN on behalf of felipe
Revision: http://svn.php.net/viewvc/?view=revision&amp;revision=305565
Log: - Fixed bug #53362 (Segmentation fault when extending SplFixedArray)
 [2010-11-19 21:09 UTC] felipe@php.net
-Status: Feedback +Status: Closed -Assigned To: +Assigned To: felipe
 [2010-11-19 21:09 UTC] felipe@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC