- Fixed bug #53362 (Segmentation fault when extending SplFixedArray)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@305565 c90b9560-bf6c-de11-be94-00142212c4b1